--- a/public/landing_page.css
+++ b/public/landing_page.css
@@ -116,3 +116,12 @@ h3{
     background-color: inherit;
     border: 2px solid white;
 }
+
+.nav-menu > :nth-child(1):hover::before {
+    width: 65;
+    filter: drop-shadow(0 0 25px var(--clr));
+  }
+  .nav-menu > :nth-child(2):hover::before {
+    width: 92;
+    filter: drop-shadow(0 0 25px var(--clr));
+  }
